<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.ChangePasswordActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/purple_500"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_finish"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/backwardButton"
            android:src="@mipmap/icon_bac" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout11"
        android:layout_width="390dp"
        android:layout_height="69dp"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="544dp"
        android:background="@drawable/editor_box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.161">

        <TextView
            android:id="@+id/oldPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:lines="1"
            android:padding="1dp"
            android:text="@string/old_password"
            android:textColor="#616161"
            android:textSize="20sp" />

        <View
            android:id="@+id/view1"
            android:layout_width="2dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="13dp"
            android:layout_toEndOf="@+id/oldPassword"
            android:background="#03A9F4" />

        <EditText
            android:id="@+id/editor_Password"
            android:layout_width="294dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@+id/oldPassword"
            android:autofillHints=""
            android:ems="19"
            android:hint="@string/please_enter_current_password"
            android:inputType="textPassword"
            android:lines="1"
            android:minHeight="48dp"
            android:padding="1dp"
            android:singleLine="true"
            android:textColorHint="#616161"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout12"
        android:layout_width="390dp"
        android:layout_height="69dp"
        android:layout_marginBottom="448dp"
        android:background="@drawable/editor_box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/relativeLayout11"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout11"
        app:layout_constraintVertical_bias="0.925">

        <TextView
            android:id="@+id/newPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:lines="1"
            android:padding="1dp"
            android:text="@string/new_password"
            android:textColor="#616161"
            android:textSize="20sp" />

        <View
            android:id="@+id/view2"
            android:layout_width="2dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="13dp"
            android:layout_toEndOf="@+id/newPassword"
            android:background="#03A9F4" />

        <EditText
            android:id="@+id/editor_new_password"
            android:layout_width="294dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@+id/newPassword"
            android:autofillHints=""
            android:ems="19"
            android:hint="@string/please_enter_new_password"
            android:inputType="textPassword"
            android:lines="1"
            android:minHeight="48dp"
            android:padding="1dp"
            android:singleLine="true"
            android:textColorHint="#616161"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout13"
        android:layout_width="390dp"
        android:layout_height="69dp"
        android:background="@drawable/editor_box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/relativeLayout12"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/relativeLayout12"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout12"
        app:layout_constraintVertical_bias="0.078">

        <TextView
            android:id="@+id/checkPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:lines="1"
            android:padding="1dp"
            android:text="@string/check_password"
            android:textColor="#616161"
            android:textSize="20sp" />

        <View
            android:id="@+id/view3"
            android:layout_width="2dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="13dp"
            android:layout_toEndOf="@+id/checkPassword"
            android:background="#03A9F4" />

        <EditText
            android:id="@+id/editor_check_password"
            android:layout_width="294dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@+id/checkPassword"
            android:autofillHints=""
            android:ems="19"
            android:hint="@string/please_enter_check_password"
            android:inputType="textPassword"
            android:lines="1"
            android:minHeight="48dp"
            android:padding="1dp"
            android:singleLine="true"
            android:textColorHint="#616161"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck" />

    </RelativeLayout>

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="confirm"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout13" />
</androidx.constraintlayout.widget.ConstraintLayout>