<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".UI.fragments.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/profilePicture"
            android:layout_width="match_parent"
            android:layout_height="130dp"

            android:contentDescription="@string/jump"
            android:textAlignment="center"
            android:src="@drawable/sample_profile" />

        <TextView
            android:id="@+id/hello_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_marginTop="10dp">

                <View
                    android:id="@+id/view6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/password_icon"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/jump"
                    android:src="@drawable/ic_password"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/change_password_text"
                    android:layout_width="350dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/change_password"
                    android:textAlignment="center"
                    android:textSize="34sp"
                    app:layout_constraintBottom_toBottomOf="@id/password_icon"
                    app:layout_constraintStart_toEndOf="@+id/password_icon"
                    app:layout_constraintTop_toTopOf="@id/password_icon" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/jump"
                    app:layout_constraintBottom_toBottomOf="@id/change_password_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/change_password_text"
                    app:layout_constraintTop_toTopOf="@id/change_password_text"
                    android:src="@drawable/ic_action_jumpto" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp">

                <View
                    android:id="@+id/wishlist_jump_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/wishlist_icon"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/jump"
                    android:src="@drawable/ic_wishlist"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="350dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/wishlist"
                    android:textAlignment="center"
                    android:textSize="34sp"
                    app:layout_constraintBottom_toBottomOf="@+id/wishlist_icon"
                    app:layout_constraintStart_toEndOf="@id/wishlist_icon"
                    app:layout_constraintTop_toTopOf="@+id/wishlist_icon" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/jump"
                    app:layout_constraintBottom_toBottomOf="@+id/textView2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/textView2"
                    app:layout_constraintTop_toTopOf="@+id/textView2"
                    android:src="@drawable/ic_action_jumpto" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <Button
            android:id="@+id/signOutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/sign_out_button"
            android:text="@string/signOutButton" />

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>
